--- a/esphome/8ch-cc-led-driver.yaml
+++ b/esphome/8ch-cc-led-driver.yaml
@@ -53,7 +53,7 @@ substitutions:
   project_name: "andilge.eight-downlights"
   device: 'eight_downlights'
   reboot_timeout: '30min'
-  project_version: '0.993'
+  project_version: '0.995'
   pwm_frequency: '19531Hz'
   default_transition: '2.5s'
   gamma_correct: '2.4'
@@ -235,7 +235,7 @@ binary_sensor:
       - timing:
           - ON for at least 4s
         then:
-          - button.press: restart_button
+          - switch.toggle: auto_night_light
 
   - platform: gpio
     device_class: motion
@@ -295,8 +295,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_01
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -304,8 +304,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_02
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -313,8 +313,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_03
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -322,8 +322,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_04
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -331,8 +331,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_05
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -340,8 +340,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_06
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -349,8 +349,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_07
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -358,8 +358,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_08
-                relative_brightness: 2%
-                transition_length: 333ms
+                relative_brightness: 1.5%
+                transition_length: 300ms
 
     # lowering brighness
     on_anticlockwise:
@@ -371,8 +371,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_01
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -380,8 +380,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_02
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -389,8 +389,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_03
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -398,8 +398,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_04
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -407,8 +407,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_05
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -416,8 +416,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_06
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -425,8 +425,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_07
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
       - if:
           condition:
@@ -434,8 +434,8 @@ sensor:
           then:
             - light.dim_relative:
                 id: downlight_08
-                relative_brightness: -2%
-                transition_length: 333ms
+                relative_brightness: -1.5%
+                transition_length: 300ms
 
   - platform: uptime
     name: '${name} uptime hours'
@@ -447,7 +447,7 @@ sensor:
       # delete not a number or calculate and state value
       - lambda: 'if (isnan(x)) return{}; else return(x/3600);'
 
-  # # WiFi rssi in dBs
+  # WiFi rssi in dBs
   - platform: wifi_signal
     id: wifi_rssi_dbs
     internal: true
@@ -456,7 +456,7 @@ sensor:
       # delete not a number or state value
       - lambda: 'if (isnan(x)) return{}; else return(x);'
 
-  # # WiFi rssi in percents
+  # WiFi rssi in percents
   - platform: template
     name: '${name} WiFi signal'
     id: wifi_rssi
@@ -472,8 +472,6 @@ sensor:
       else
         return round(( -0.0154 * id(wifi_rssi_dbs).state * id(wifi_rssi_dbs).state ) - ( 0.3794 * id(wifi_rssi_dbs).state ) + 98.182 );
     filters:
-      # delete not a number or state value
-      - lambda: 'if (isnan(x)) return{}; else return(x);'
       # don''t report changes lower than +-2%
       - delta: 2
 
