--- a/esphome/8ch-cc-led-driver.yaml
+++ b/esphome/8ch-cc-led-driver.yaml
@@ -9,41 +9,41 @@
 
 # Pinout reference
 # ================
-# ---------------------------------------
-# | GPIO | Board | Usage                |
-# |------|-------|----------------------|
-# | 02   | ~     | blue LED on module   |
-# |------|-------|----------------------|
-# | 04   | U701  | dallas temp. sensor  |
-# |------|-------|----------------------|
-# | 05   | J301  | momentary switch     |
-# |------|-------|----------------------|
-# | 13   | J501	 | free to use GPIO     |
-# |------|-------|----------------------|
-# | 16   | LED1	 | LED1 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 17   | LED2	 | LED2 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 18   | LED3	 | LED3 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 19   | LED4	 | LED4 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 21   | LED5  | LED5 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 22   | LED6	 | LED6 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 23   | LED7  | LED7 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 25   | LED8  | LED8 dimming (pwm)   |
-# |------|-------|----------------------|
-# | 26   | J301  | rotary encoder pin A |
-# |------|-------|----------------------|
-# | 27   | J301  | rotary encoder pin B |
-# |------|-------|----------------------|
-# | 32   | J401  | motion sensor (pir)  |
-# |------|-------|----------------------|
-# | 33   | J501  | free to use GPIO     |
-# ---------------------------------------
+# # --------------------------------------------
+# | GPIO | Board | Usage                       |
+# |------|-------|-----------------------------|
+# | 02   | ~     | blue LED on module          |
+# |------|-------|-----------------------------|
+# | 04   | U701  | dallas temp. sensor         |
+# |------|-------|-----------------------------|
+# | 05   | J301  | momentary switch            |
+# |------|-------|-----------------------------|
+# | 13   | J501	 | data out for adressable LED |
+# |------|-------|-----------------------------|
+# | 16   | LED1	 | LED1 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 17   | LED2	 | LED2 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 18   | LED3	 | LED3 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 19   | LED4	 | LED4 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 21   | LED5  | LED5 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 22   | LED6	 | LED6 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 23   | LED7  | LED7 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 25   | LED8  | LED8 dimming (pwm)          |
+# |------|-------|-----------------------------|
+# | 26   | J301  | rotary encoder pin A        |
+# |------|-------|-----------------------------|
+# | 27   | J301  | rotary encoder pin B        |
+# |------|-------|-----------------------------|
+# | 32   | J401  | motion sensor (pir)         |
+# |------|-------|-----------------------------|
+# | 33   | J501  | free to use GPIO            |
+# ----------------------------------------------
 
 ##### basic configs #####
 
@@ -581,6 +581,14 @@ light:
     default_transition_length: ${default_transition}
     output: pwm_out_08
     gamma_correct: ${gamma_correct}
+
+  - platform: fastled_clockless
+    chipset: WS2811
+    pin: GPIO13
+    num_leds: 10
+    rgb_order: BRG
+    name: '${name} encoder ring'
+
 
 switch:
   # virtual switch for night light
