small cosmetic improvments, fixing latest smt position file

--- a/esphome/8ch-cc-led-driver.yaml
+++ b/esphome/8ch-cc-led-driver.yaml
@@ -12,7 +12,7 @@
 # # --------------------------------------------
 # | GPIO | Board | Usage                       |
 # |------|-------|-----------------------------|
-# | 02   | ~     | blue LED on module          |
+# | 02   | ~     | blue LED on ESP32 module    |
 # |------|-------|-----------------------------|
 # | 04   | U701  | dallas temp. sensor         |
 # |------|-------|-----------------------------|
